--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Local documentation not tracked
+README.md
+G03 - Authentication, Authorization, Layout & Dashboard.md
