feat: add social authentication component and integrate Google login. Introduced Container, Grid, Section, Stack layout components for flexible UI design. Implemented ThemeToggle for dark/light mode switching.

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "dev": "NODE_ENV=development nest start --watch",
+    "dev": "cross-env NODE_ENV=development nest start --watch",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "migration:generate": "npm run typeorm -- migration:generate -d data-source.ts src/migrations/auto",
     "migration:run": "npm run typeorm -- migration:run -d data-source.ts",
@@ -63,6 +63,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
+    "cross-env": "^10.1.0",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.2",
