feat(seed): add database seeder with sample operators, routes, buses, seats and trips

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "migration:generate": "npm run typeorm -- migration:generate -d data-source.ts src/migrations/auto",
     "migration:run": "npm run typeorm -- migration:run -d data-source.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d data-source.ts",
+    "seed": "ts-node -r tsconfig-paths/register src/seeders/seed.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -48,6 +49,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
+    "csv-parse": "^6.1.0",
     "google-auth-library": "^10.5.0",
     "joi": "^18.0.1",
     "pg": "^8.16.3",
