--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,7 @@
     "migration:generate": "npm run typeorm -- migration:generate -d data-source.ts src/migrations/auto",
     "migration:run": "npm run typeorm -- migration:run -d data-source.ts",
     "migration:revert": "npm run typeorm -- migration:revert -d data-source.ts",
-    "seed": "ts-node -r tsconfig-paths/register src/seeders/seed.ts",
+    "seed": "ts-node --project tsconfig.json -r tsconfig-paths/register src/seeders/seed.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
