--- a/backend/package.json
+++ b/backend/package.json
@@ -56,6 +56,7 @@
     "google-auth-library": "^10.5.0",
     "joi": "^18.0.1",
     "pg": "^8.16.3",
+    "prom-client": "^15.1.2",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
