--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "seed:win": "ts-node --project tsconfig.json -r tsconfig-paths/register src/seeders/seed.ts"
   },
   "dependencies": {
+    "@keyv/redis": "^5.1.5",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/cli": "^11.0.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -49,12 +51,16 @@
     "@types/node": "^22.10.7",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.7",
+    "cacheable": "^2.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "csv-parse": "^6.1.0",
     "google-auth-library": "^10.5.0",
+    "ioredis": "^5.8.2",
     "joi": "^18.0.1",
+    "keyv": "^5.5.5",
     "pg": "^8.16.3",
     "prom-client": "^15.1.2",
     "reflect-metadata": "^0.2.2",
