--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,10 +50,12 @@
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.13",
     "zustand": "^5.0.8"
