feat(admin): add admin account management and profile updates

--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,4 @@ vite.config.ts.timestamp-*
 G03 - Authentication, Authorization, Layout & Dashboard.md
 week2_trip_management.md
 ERD.png 
+Feature list - Admin.csv
