--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,8 @@
     "seed:win": "ts-node --project tsconfig.json -r tsconfig-paths/register src/seeders/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
+    "@aws-sdk/s3-request-presigner": "^3.958.0",
     "@keyv/redis": "^5.1.5",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/cli": "^11.0.0",
@@ -36,7 +38,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
-    "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-express": "^11.1.10",
     "@nestjs/platform-socket.io": "^11.1.9",
     "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.1",
@@ -47,7 +49,6 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.0",
-    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
@@ -57,21 +58,25 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "csv-parse": "^6.1.0",
+    "file-type": "^21.1.1",
     "google-auth-library": "^10.5.0",
     "ioredis": "^5.8.2",
     "joi": "^18.0.1",
     "keyv": "^5.5.5",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prom-client": "^15.1.2",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
+    "sharp": "^0.34.5",
     "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.27",
     "typeorm-naming-strategies": "^4.1.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -79,6 +84,7 @@
     "@nestjs/schematics": "^11.0.0",
     "@nestjs/testing": "^11.0.1",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/supertest": "^6.0.2",
     "cross-env": "^10.1.0",
     "eslint": "^9.18.0",
