Remove .DS_Store and ignore it
Delete .DS_Store and add it to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,4 @@ G03 - Authentication, Authorization, Layout & Dashboard.md
 week2_trip_management.md
 ERD.png 
 Feature list - Admin.csv
+.DS_Store
