feat: add event-driven notifications with realtime websocket support

--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.1",
     "@nestjs/jwt": "^11.0.1",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.1.10",
@@ -58,6 +59,7 @@
     "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "csv-parse": "^6.1.0",
+    "eventemitter2": "^6.4.9",
     "file-type": "^21.1.1",
     "google-auth-library": "^10.5.0",
     "ioredis": "^5.8.2",
