--- a/backend/package.json
+++ b/backend/package.json
@@ -68,6 +68,7 @@
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "prom-client": "^15.1.2",
+    "qrcode": "^1.5.4",
     "reflect-metadata": "^0.2.2",
     "resend": "^6.5.2",
     "rxjs": "^7.8.1",
@@ -87,6 +88,7 @@
     "@nestjs/testing": "^11.0.1",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
+    "@types/qrcode": "^1.5.6",
     "@types/supertest": "^6.0.2",
     "cross-env": "^10.1.0",
     "eslint": "^9.18.0",
