--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,11 +44,14 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "html2pdf.js": "^0.12.1",
     "lucide-react": "^0.552.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.68.0",
+    "react-qr-code": "^2.0.18",
     "react-router": "^7.9.5",
     "react-router-dom": "^7.9.5",
     "recharts": "^2.15.4",
