config for deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,11 @@
     "start": "nest start",
     "dev": "cross-env NODE_ENV=development nest start --watch",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:generate": "npm run typeorm -- migration:generate -d data-source.ts src/migrations/auto",
-    "migration:run": "npm run typeorm -- migration:run -d data-source.ts",
-    "migration:revert": "npm run typeorm -- migration:revert -d data-source.ts",
+    "migration:generate": "NODE_TLS_REJECT_UNAUTHORIZED=0 npm run typeorm -- migration:generate -d data-source.ts src/migrations/auto",
+    "migration:run": "NODE_TLS_REJECT_UNAUTHORIZED=0 npm run typeorm -- migration:run -d data-source.ts",
+    "migration:revert": "NODE_TLS_REJECT_UNAUTHORIZED=0 npm run typeorm -- migration:revert -d data-source.ts",
     "seed": "ts-node --project tsconfig.json -r tsconfig-paths/register src/seeders/seed.ts",
+    "seed:dev": "NODE_ENV=development npx ts-node -r tsconfig-paths/register src/seeders/seed.ts",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
